--- a/action.yml
+++ b/action.yml
@@ -23,3 +23,6 @@ inputs:
 runs:
   using: 'node16'
   main: 'dist/index.js'
+              - name: Jellyfin plugin repo
+                uses: Kevinjil/jellyfin-plugin-repo-action@v0.4.1
+            
